--- a/DD_DarkDungeon_Client_040822.css
+++ b/DD_DarkDungeon_Client_040822.css
@@ -147,3 +147,33 @@ input.styled_off {
   box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
               inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
+
+input.styled_res {
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  /*background-color: rgba(220, 0, 0, 1);*/
+  background-color: rgb(145, 23, 226);
+  background-image: linear-gradient(to top left,
+                                    rgba(0, 0, 0, .2),
+                                    rgba(0, 0, 0, .2) 30%,
+                                    rgba(0, 0, 0, 0));
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+              inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.styled_res:hover {
+  /*background-color: rgba(255, 0, 0, 1);*/
+  /*background-color: rgb(216, 92, 20);*/
+  background-color: rgb(203, 216, 20);
+}
+
+.styled_res:active {
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+              inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
