--- a/DD_DarkDungeon_Client.css
+++ b/DD_DarkDungeon_Client.css
@@ -1,10 +1,11 @@
 
 /* Copyright (c) 2022, Brenkman Andrey and/or its affiliates. All rights reserved. */
 /* Last modified 07.07.2018 - 15.06.2019 - 23.11.2019 - */
-
+/*
 textarea {
   resize: none;
 }
+*/
 
 h1.st1 {
   background-color: white;
